// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carrinho/> quando renderizado e possui valor maior que 99 1`] = `
<View
  collapsable={false}
  entering={
    InnerKeyframe {
      "build": [Function],
      "definitions": {
        "0": {
          "opacity": 0.7,
          "transform": [
            {
              "rotate": "-10deg",
            },
          ],
        },
        "100": {
          "opacity": 1,
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        },
        "50": {
          "transform": [
            {
              "rotate": "10deg",
            },
          ],
        },
      },
      "durationV": 400,
      "parsedAnimation": [Function],
      "reduceMotionV": "system",
    }
  }
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {},
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 35,
        "justifyContent": "center",
        "width": 35,
      },
      undefined,
    ]
  }
  layout={
    LinearTransition {
      "build": [Function],
      "durationV": undefined,
      "randomizeDelay": false,
      "reduceMotionV": "system",
      "type": [Function],
    }
  }
  nativeID="1"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 35,
        "justifyContent": "center",
        "width": 35,
      },
      undefined,
    ]
  }
>
  <svg
    data-file-name="SvgIconCart"
    height={30}
    width={30}
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F30000",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "height": 20,
          "justifyContent": "center",
          "minWidth": 30,
          "paddingTop": 2,
          "position": "absolute",
          "right": -10,
          "top": -12,
        },
        undefined,
      ]
    }
  >
    <Text
      palette="white"
      size="small"
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "SofiaPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
          },
          undefined,
        ]
      }
      weight="semibold"
    >
      +99
    </Text>
  </View>
</View>
`;

exports[`<Carrinho/> quando renderizado e possui valor menor que 99 1`] = `
<View
  collapsable={false}
  entering={
    InnerKeyframe {
      "build": [Function],
      "definitions": {
        "0": {
          "opacity": 0.7,
          "transform": [
            {
              "rotate": "-10deg",
            },
          ],
        },
        "100": {
          "opacity": 1,
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        },
        "50": {
          "transform": [
            {
              "rotate": "10deg",
            },
          ],
        },
      },
      "durationV": 400,
      "parsedAnimation": [Function],
      "reduceMotionV": "system",
    }
  }
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {},
    }
  }
  jestInlineStyle={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 35,
        "justifyContent": "center",
        "width": 35,
      },
      undefined,
    ]
  }
  layout={
    LinearTransition {
      "build": [Function],
      "durationV": undefined,
      "randomizeDelay": false,
      "reduceMotionV": "system",
      "type": [Function],
    }
  }
  nativeID="0"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 35,
        "justifyContent": "center",
        "width": 35,
      },
      undefined,
    ]
  }
>
  <svg
    data-file-name="SvgIconCart"
    height={30}
    width={30}
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F30000",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "height": 20,
          "justifyContent": "center",
          "minWidth": 30,
          "paddingTop": 2,
          "position": "absolute",
          "right": -10,
          "top": -12,
        },
        undefined,
      ]
    }
  >
    <Text
      palette="white"
      size="small"
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "SofiaPro-SemiBold",
            "fontSize": 17,
            "lineHeight": 17,
          },
          undefined,
        ]
      }
      weight="semibold"
    >
      10
    </Text>
  </View>
</View>
`;
